Closed Bug 1708407 Opened 5 years ago Closed 5 years ago

[Wayland] Memleaks on Wayland

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(2 files, 2 obsolete files)

There are memleaks on Wayland which pop up on Mochitest.

Attachment #9219178 - Attachment is obsolete: true
Attachment #9219181 - Attachment is obsolete: true
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/16279f8d6dd6 [Wayland] Fix leaked renderDeviceName at glxtest.cpp, r=jhorak
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/aef3e4b14c72 [Wayland] Fix leaked initial_draw_cbs at mozcontainer, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: