Bug 1708407 [Wayland] Fix leaked initial_draw_cbs at mozcontainer, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D113778